# pyimmolate

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
examples/: buggy_erratic.py  double_legendary.py  emperor_fool.py  erratic_flush_five.py  half_blueprint_hologram.py  max_cash_ante_1.py  perkeo_observatory.py  rare_early_game.py  showman_emperor_fool.py
pyimmolate/: __init__.py  _api_signatures.py  _core.py  _inst.py  _seeds.py  api.py  bosses.py  cards.py  challenges.py  codegen.py  constants.py  decks.py  downloader.py  editions.py  enhancements.py  hands.py  item_types.py  jokers.py  lists.py  node_types.py  pack_types.py  planets.py  random_types.py  ranks.py  rarities.py  runner.py  seals.py  sources.py  spectrals.py  stakes.py  suits.py  tags.py  tarots.py  vouchers.py
scripts/: generate_constants.py
